--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@nuxt/icon": "^1.12.0",
     "@nuxt/ui": "^3.0.2",
     "eslint": "^9.25.0",
+    "firebase": "^11.6.0",
     "nuxt": "^3.16.2",
+    "nuxt-vuefire": "^1.0.5",
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuefire": "^3.2.1"
   }
 }
